--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "repository": "",
   "keywords": [],
   "license": "MIT",
-  "author": "Paul Pagnan <paul@pagnan.com.au>",
+  "author": "Pooja Kittur",
   "devDependencies": {
     "babel-core": "^6.0.0",
     "babel-eslint": "^6.0.0",
@@ -43,15 +43,19 @@
     "react-addons-test-utils": "^15.0.0",
     "react-hot-loader": "^1.2.9",
     "rimraf": "^2.4.3",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.0",
     "webpack-dev-server": "^1.12.0"
   },
   "dependencies": {
+    "bootstrap": "^4.5.0",
     "core-js": "^2.0.0",
+    "node-sass": "^4.14.1",
     "normalize.css": "^4.0.0",
     "react": "^15.0.0",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^15.0.0",
     "socket.io-client": "^1.4.8"
   }
